# airouter

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
airouter/: __init__.py  models.py  streamed_completion.py
airouter/providers/: aws_bedrock_chat_provider.py  aws_bedrock_provider.py  azure_openai_provider.py  base_provider.py  factory.py  ollama_provider.py  openai_provider.py  vertex_ai_text_provider.py
airouter/utils/: interactive.py  logs.py  tokens.py
airouter/xperiments/: exp.py  exp_multi.py  exp_simple.py
